Source/WebCore/Modules/webgpu/GPUCanvasContext.cpp
@@ -41,9 +41,6 @@ std::unique_ptr<GPUCanvasContext> GPUCanvasContext::create(CanvasBase& canvas)
 {
     auto context = std::unique_ptr<GPUCanvasContext>(new GPUCanvasContext(canvas));
     context->suspendIfNeeded();
-
-    InspectorInstrumentation::didCreateCanvasRenderingContext(*context);
-
     return context;
 }
 
@@ -67,8 +64,11 @@ Ref<WebGPUSwapChain> GPUCanvasContext::configureSwapChain(const WebGPUSwapChainD
         // FIXME: Test that this works as expected with error reporting.
         if (m_swapChain)
             m_swapChain->destroy();
-        
+
+        InspectorInstrumentation::willConfigureSwapChain(*this, newSwapChain.get());
+
         m_swapChain = newSwapChain.copyRef();
+
         notifyCanvasContentChanged();
     }
     
