Source/WebCore/inspector/InspectorShaderProgram.cpp
@@ -55,8 +55,9 @@ InspectorShaderProgram::InspectorShaderProgram(WebGLProgram& program, InspectorC
 
 WebGLRenderingContextBase& InspectorShaderProgram::context() const
 {
-    ASSERT(is<WebGLRenderingContextBase>(m_canvas.context()));
-    return downcast<WebGLRenderingContextBase>(m_canvas.context());
+    ASSERT(m_canvas.canvasContext());
+    ASSERT(is<WebGLRenderingContextBase>(*m_canvas.canvasContext()));
+    return downcast<WebGLRenderingContextBase>(*m_canvas.canvasContext());
 }
 
 WebGLShader* InspectorShaderProgram::shaderForType(const String& protocolType)
