Source/WebInspectorUI/UserInterface/Protocol/CanvasObserver.js
@@ -42,9 +42,9 @@ WI.CanvasObserver = class CanvasObserver
         WI.canvasManager.canvasMemoryChanged(canvasId, memoryCost);
     }
 
-    cssCanvasClientNodesChanged(canvasId)
+    clientNodesChanged(canvasId)
     {
-        WI.canvasManager.cssCanvasClientNodesChanged(canvasId);
+        WI.canvasManager.clientNodesChanged(canvasId);
     }
 
     recordingStarted(canvasId, initiator)
@@ -75,5 +75,11 @@ WI.CanvasObserver = class CanvasObserver
     programDeleted(programId)
     {
         WI.canvasManager.programDeleted(programId);
+    }
+
+    // COMPATIBILITY (iOS 13): Canvas.events.cssCanvasClientNodesChanged was renamed to Canvas.events.clientNodesChanged.
+    cssCanvasClientNodesChanged(canvasId)
+    {
+        WI.canvasManager.clientNodesChanged(canvasId);
     }
 };
